--- a/content/resources/4-296s05-th.md
+++ b/content/resources/4-296s05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/4-296-furniture-making-spring-2005/50e253ec0091791d4c3447906174eb36_4-296s05-th.jpg
+file: /media/courses/4-296-furniture-making-spring-2005/50e253ec0091791d4c3447906174eb36_4-296s05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Intricate pieces for furniture include wood pieces with curvature. (Image\_\
@@ -9,6 +9,8 @@ image_metadata:
   credit: ''
   image-alt: A wood-bending demonstration.  Three students bending wooden strips with
     their hands.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 4-296s05-th.jpg
 uid: 50e253ec-0091-791d-4c34-47906174eb36
